make htlatex happy

--- a/polyfaq.tex
+++ b/polyfaq.tex
@@ -1,4 +1,4 @@
-\documentclass[[a4paper,12pt]{article}
+\documentclass[a4paper,12pt]{article}
 \setlength{\oddsidemargin}{0mm}
 \setlength{\textwidth}{16.8cm}
 \setlength{\topmargin}{0mm}
@@ -647,7 +647,7 @@ of $f(d)$.
 \begin{theorem}[B\'ar\'any and P\'or \cite{bp-01pmf-00}]
 There is a positive constant $c$ such that
 \begin{align}
-f(d) > \left ( \frac{c\;d}{\log d} \right )^\frac{d}{4}.
+f(d) >  \left ( \frac{c\;d}{\log d} \right )^{\frac{d}{4}}.
 \end{align}
 \end{theorem} 
 This is a recent breakthrough in the theory of 0-1 polytopes.
