remove obsolete "html" latex package

--- a/polyfaq.tex
+++ b/polyfaq.tex
@@ -16,7 +16,7 @@
 %\usepackage[dvips,draft]{graphicx}   % unix environment
 \usepackage[dvips,final]{graphicx}   % unix environment
 
-\usepackage{html,amsmath}
+\usepackage{amsmath}
 \usepackage{hyperref}
 
 \DeclareGraphicsExtensions{.jpg,.eps}
