trying to fix some umlauts in html

--- a/fukuda1.bib
+++ b/fukuda1.bib
@@ -369,13 +369,13 @@ Atlanta, submitted to Mathematical Programming"
 }
 
 @inproceedings{bef-cevcm-00,
-author = 	{B. B{\"u}eler and A. Enge and K. Fukuda},
+author = 	{B. B{\"{u}}eler and A. Enge and K. Fukuda},
 title = 	{Exact volume computation for convex polytopes: A practical study},
 year = 	2000,
 booktitle = 	{Polytopes -- Combinatorics and Computation},
 editor =	{G. Kalai and G. M. Ziegler},
 series =	{DMV-Seminar 29},
-publisher =	{Birkh\"auser},
+publisher =	{Birkh\"{a}user},
 pages =	{131--154},
 note =	"\url{http://www.cs.mcgill.ca/~fukuda/download/paper/volcomp980807.pdf}",
 keywords = 	{volume, convex polytoeps, convex hull, vertex enumeration, triangulation},
@@ -409,7 +409,7 @@ annote	= {The main goal of this research is to investigate practicality of exist
 
 
 @article{bf-cwupc-05
-, author =	"I. B\'ar\'any and K. Fukuda"
+, author =	"I. B\'{a}r\'{a}ny and K. Fukuda"
 , title =	"A case when the union of polytopes is convex"
 , journal =	"Linear Algebra and its Applications"
 , year =	"2005"
@@ -476,7 +476,7 @@ Conference on Advances in Convex Analysis and Global Optimization, Samos, Greece
 }
 
 @techreport{bmfn-psbza-96
-, author =	" A. Br{\"u}ngger and A. Marzetta and K. Fukuda and J. Nievergelt"
+, author =	" A. Br{\"{u}}ngger and A. Marzetta and K. Fukuda and J. Nievergelt"
 , title =	"The parallel search bench ZRAM and its
 applications"
 , institution =	"ETH Zurich"
@@ -487,7 +487,7 @@ applications"
 }
 
 @article{bmfn-psbza-99
-, author =	" A. Br{\"u}ngger and A. Marzetta and K. Fukuda and J. Nievergelt"
+, author =	" A. Br{\"{u}}ngger and A. Marzetta and K. Fukuda and J. Nievergelt"
 , title =	"The parallel search bench ZRAM and its
 applications"
 , journal =	"Annals of Operations Research"
