--- a/fukuda2.bib
+++ b/fukuda2.bib
@@ -39,7 +39,7 @@ MRREVIEWER = {Volker Strehl}
   bibsource = {dblp computer science bibliography, http://dblp.org}
 }
 @article {ac-ccqmnp-87,
-    AUTHOR = {Aganagi{\'c}, M. and Cottle, R. W.},
+    AUTHOR = {Aganagi{\'{c}}, M. and Cottle, R. W.},
      TITLE = {A constructive characterization of {$Q_0$}-matrices with
               nonnegative principal minors},
    JOURNAL = {Math. Programming},
@@ -145,7 +145,7 @@ MRREVIEWER = {{\c{S}}tefan {\c{T}}igan},
 
 
 @article {lv-hrfc-06,
-    AUTHOR = {Lov{\'a}sz, L{\'a}szl{\'o} and Vempala, Santosh},
+    AUTHOR = {Lov{\'{a}}sz, L{\'{a}}szl{\'{o}} and Vempala, Santosh},
      TITLE = {Hit-and-run from a corner},
    JOURNAL = {SIAM J. Comput.},
   FJOURNAL = {SIAM Journal on Computing},
@@ -156,13 +156,13 @@ MRREVIEWER = {{\c{S}}tefan {\c{T}}igan},
       ISSN = {0097-5397},
    MRCLASS = {60G50 (52A20 68W20)},
   MRNUMBER = {2203735 (2007h:60041)},
-MRREVIEWER = {Walter M. B{\"o}hm},
+MRREVIEWER = {Walter M. B{\"{o}}hm},
        DOI = {10.1137/S009753970544727X},
        URL = {http://dx.doi.org/10.1137/S009753970544727X},
 }
 		
 @inproceedings {lv-hrfc-04,
-    AUTHOR = {Lov{\'a}sz, L{\'a}szl{\'o} and Vempala, Santosh},
+    AUTHOR = {Lov{\'{a}}sz, L{\'{a}}szl{\'{o}} and Vempala, Santosh},
      TITLE = {Hit-and-run from a corner},
  BOOKTITLE = {Proceedings of the 36th {A}nnual {ACM} {S}ymposium on {T}heory
               of {C}omputing},
@@ -176,7 +176,7 @@ MRREVIEWER = {Walter M. B{\"o}hm},
 }
 		
 @article {l-hrmf-99,
-    AUTHOR = {Lov{\'a}sz, L{\'a}szl{\'o}},
+    AUTHOR = {Lov{\'a}sz, L{\'{a}}szl{\'{o}}},
      TITLE = {Hit-and-run mixes fast},
    JOURNAL = {Math. Program.},
   FJOURNAL = {Mathematical Programming. A Publication of the Mathematical
@@ -208,9 +208,9 @@ MRREVIEWER = {David J. Aldous},
 
 @incollection {lv-epgc-78,
     AUTHOR = {Las Vergnas, M.},
-     TITLE = {Extensions ponctuelles d'une g\'eom\'etrie combinatoire
-              orient\'ee},
- BOOKTITLE = {Probl\`emes combinatoires et th\'eorie des graphes ({C}olloq.
+     TITLE = {Extensions ponctuelles d'une g\'{e}om\'{e}trie combinatoire
+              orient\'{e}e},
+ BOOKTITLE = {Probl\`{e}mes combinatoires et th\'{e}orie des graphes ({C}olloq.
               {I}nternat. {CNRS}, {U}niv. {O}rsay, {O}rsay, 1976)},
     SERIES = {Colloq. Internat. CNRS},
     VOLUME = {260},
@@ -225,7 +225,7 @@ MRREVIEWER = {G. L. Alexanderson},
 
 @article {lv-mo-75,
     AUTHOR = {Las Vergnas, M.},
-     TITLE = {Matro\"\i des orientables},
+     TITLE = {Matro\"{i}des orientables},
    JOURNAL = {C. R. Acad. Sci. Paris S\'er. A-B},
     VOLUME = {280},
       YEAR = {1975},
@@ -237,7 +237,7 @@ MRREVIEWER = {A. W. Ingleton},
 
 @unpublished{lv-mo-74,
     AUTHOR = {Las Vergnas, M.},
-     TITLE = {Matro\"\i des orientables},
+     TITLE = {Matro\"{i}des orientables},
     NOTE = {unpublished monograph},
     MONTH ={April},
       YEAR = {1974},
@@ -287,7 +287,7 @@ MRREVIEWER = {A. W. Ingleton},
 , author =	"J.P. Petit"
 , title =	"Specification Geometrique des Produits: Methode d'Analyse de Tolerances"
 , type =	"Ph.{D}. {T}hesis"
-, school =	"Universit\'e de Savoie"
+, school =	"Universit\'{e} de Savoie"
 , address =	"France"
 , year =	"2004"
 , keywords =	"oriented matroids, linear programming, duality"
@@ -647,7 +647,7 @@ MRREVIEWER = {E. G. Gol{\cprime}shte{\u\i}n},
 }
 
 @article {hkw-paiabi-03,
-    AUTHOR = {Haus, U.-U. and K{\"o}ppe, M. and Weismantel, R.},
+    AUTHOR = {Haus, U.-U. and K{\"{o}}ppe, M. and Weismantel, R.},
      TITLE = {A primal all-integer algorithm based on irreducible solutions},
       NOTE = {Algebraic and geometric methods in discrete optimization},
    JOURNAL = {Math. Program.},
@@ -664,7 +664,7 @@ MRREVIEWER = {Victor P. Il{\cprime}ev},
 }
 		
 @article {l-otscog-79,
-    AUTHOR = {Lov{\'a}sz, L.},
+    AUTHOR = {Lov{\'{a}}sz, L.},
      TITLE = {On the {S}hannon capacity of a graph},
    JOURNAL = {IEEE Trans. Inform. Theory},
   FJOURNAL = {Institute of Electrical and Electronics Engineers.
@@ -688,7 +688,7 @@ American Mathematical Society
 Providence, RI 02904-2294
 
 @article {kls-ipcbl-95,
-    AUTHOR = {Kannan, R. and Lov{\'a}sz, L. and Simonovits, M.},
+    AUTHOR = {Kannan, R. and Lov{\'{a}}sz, L. and Simonovits, M.},
      TITLE = {Isoperimetric problems for convex bodies and a localization
               lemma},
    JOURNAL = {Discrete Comput. Geom.},
@@ -728,7 +728,7 @@ Providence, RI 02904-2294
 }
 		
 @article {lv-sacbva-06,
-    AUTHOR = {Lov{\'a}sz, L. and Vempala, S.},
+    AUTHOR = {Lov{\'{a}}sz, L. and Vempala, S.},
      TITLE = {Simulated annealing in convex bodies and an {$O\sp *(n\sp 4)$}
               volume algorithm},
    JOURNAL = {J. Comput. System Sci.},
@@ -1933,7 +1933,7 @@ PUBLISHER = {Cambridge University Press},
 }
 
 @article{bmt-sacb-85,
-   AUTHOR = {Buchta, C. and M{\"u}ller, J. and Tichy, R. F.},
+   AUTHOR = {Buchta, C. and M{\"{u}}ller, J. and Tichy, R. F.},
     TITLE = {Stochastical approximation of convex bodies},
   JOURNAL = {Math. Ann.},
  FJOURNAL = {Mathematische Annalen},
@@ -1965,7 +1965,7 @@ PUBLISHER = {Cambridge University Press},
 
 
 @techreport{bp-01pmf-00
-, author =	"I. B{\'a}r{\'a}ny and A. P{\'o}r"
+, author =	"I. B{\'{a}}r{\'{a}}ny and A. P{\'{o}}r"
 , title =	"0-1 polytopes with many facets"
 , type =	"Manuscript"
 , institution =	"R\'enyi Institute of Mathematics, Hungarian Academy of Sciences"
