--- a/polyfaq.tex
+++ b/polyfaq.tex
@@ -16,8 +16,7 @@
 %\usepackage[dvips,draft]{graphicx}   % unix environment
 \usepackage[dvips,final]{graphicx}   % unix environment
 
-\usepackage{amsmath}
-\usepackage{hyperref}
+\usepackage[breaklinks=true]{hyperref}
 
 \DeclareGraphicsExtensions{.jpg,.eps}
 \DeclareGraphicsRule{.jpg}{eps}{.jpg.bb}{`jpeg2ps -h -r 600 #1}
