--- a/polyfaq.tex
+++ b/polyfaq.tex
@@ -14,10 +14,9 @@
 \usepackage{color}
 %\usepackage{pslatex}
 %\usepackage[dvips,draft]{graphicx}   % unix environment
-\usepackage[dvips,final]{graphicx}   % unix environment
+\usepackage[final]{graphicx}   % unix environment
 
-\usepackage{amsmath}
-\usepackage{hyperref}
+\usepackage[breaklinks=true, destlabel=true]{hyperref}
 
 \DeclareGraphicsExtensions{.jpg,.eps}
 \DeclareGraphicsRule{.jpg}{eps}{.jpg.bb}{`jpeg2ps -h -r 600 #1}
