add a better URL

--- a/polyfaq.tex
+++ b/polyfaq.tex
@@ -122,6 +122,7 @@ Komei Fukuda\\
 Polyhedral computation {FAQ}\\
  ETH Zurich, Switzerland\\
     fukuda@math.ethz.ch\\
+\url{https://cddlib.github.io/polyhedral_faq/} or (less up to date)\\
 \url{https://people.inf.ethz.ch/fukudak/}.
 \end{quote}
 Please send your comments to the email address above.
